deploy/ui-recipevault/ui-recipe-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: ui-recipe
    app.kubernetes.io/component: ui-recipe
    app.kubernetes.io/instance: ui-recipe
    app.kubernetes.io/name: ui-recipe
    app.kubernetes.io/part-of: recipe-vault
    app.openshift.io/runtime-version: latest
  name: ui-recipe
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: ui-recipe
    deploymentconfig: ui-recipe
  sessionAffinity: None
  type: ClusterIP
