deploy/ui-recipevault/ui-recipe-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: ui-recipe
    app.kubernetes.io/component: ui-recipe
    app.kubernetes.io/instance: ui-recipe
    app.kubernetes.io/name: ui-recipe
    app.kubernetes.io/part-of: recipe-vault
    app.openshift.io/runtime-version: latest
  name: ui-recipe
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: ui-recipe
    weight: 100
  wildcardPolicy: None
